Implemented the Technical Competencies Card

--- a/success_profile_detail_job_mock.html
+++ b/success_profile_detail_job_mock.html
@@ -522,6 +522,101 @@
                     </div>
                 </div>
                 <!-- Behavioral Competencies Card Ends -->
+
+                <!-- Technical Competencies Card Begins -->
+                <div class="spdj-main-tech-card">
+                    <div class="spdj-main-tech-title-container">
+                        <span class="spdj-main-tech-title">
+                            <span class="spdj-main-tech-icon"><img src="images/technical-icon.png"/></span>
+                            Technical Competencies
+                            <span class="spdj-main-tech-help"><span class="glyphicon glyphicon-question-sign"></span></span>
+                        </span>
+                        <span class="spdj-main-tech-lvl-title">Level Required</span>
+                    </div>
+                    <div class="spdj-main-tech-item-container">
+                        <div class="spdj-main-tech-item-text-container">
+                            <span class="spdj-main-tech-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-bcomp-item-icon"></span>
+                                Commercial Acumen
+                            </span>
+                            <span class="spdj-main-tech-item-detail">
+                                Ability and skill to use understanding of the business environment and objectives in developing solutions.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-tech-item-chart">
+                                <div class="spdj-main-tech-item-stat">90%</div>
+                                <div class="spdj-main-tech-bar-chart"><img src="images/90pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-tech-item-container">
+                        <div class="spdj-main-tech-item-text-container">
+                            <span class="spdj-main-tech-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-tech-item-icon"></span>
+                                Contract Management
+                            </span>
+                            <span class="spdj-main-tech-item-detail">
+                                The ability to supervise the construction of assigned properties as per defined instructions.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-tech-item-chart">
+                                <div class="spdj-main-tech-item-stat">90%</div>
+                                <div class="spdj-main-tech-bar-chart"><img src="images/90pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-tech-item-container">
+                        <div class="spdj-main-tech-item-text-container">
+                            <span class="spdj-main-tech-item-title">
+                                Tech Comp
+                            </span>
+                            <span class="spdj-main-tech-item-detail">
+                                A preference for process-oriented, structured, and stable work environments.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-tech-item-chart">
+                                <div class="spdj-main-tech-item-stat">60%</div>
+                                <div class="spdj-main-tech-bar-chart"><img src="images/60pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-tech-item-container">
+                        <div class="spdj-main-tech-item-text-container">
+                            <span class="spdj-main-tech-item-title">
+                                Tech Comp
+                            </span>
+                            <span class="spdj-main-tech-item-detail">
+                                Motivated to seek influence, recognition, and increasing levels of responsibility.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-tech-item-chart">
+                                <div class="spdj-main-tech-item-stat">50%</div>
+                                <div class="spdj-main-tech-bar-chart"><img src="images/50pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-tech-item-container">
+                        <div class="spdj-main-tech-item-text-container">
+                            <span class="spdj-main-tech-item-title">
+                                Tech Comp
+                            </span>
+                            <span class="spdj-main-tech-item-detail">
+                                A preference for work-related interdependence, group decision making, and pursuing shared goals.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-tech-item-chart">
+                                <div class="spdj-main-tech-item-stat">25%</div>
+                                <div class="spdj-main-tech-bar-chart"><img src="images/25pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Technical Competencies Card Ends -->
             </div>
             <!-- Cards Container Ends -->
         </div>
