Implemented the Education and Experience Cards

--- a/success_profile_detail_job_mock.html
+++ b/success_profile_detail_job_mock.html
@@ -513,7 +513,7 @@
                                 A preference for work-related interdependence, group decision making, and pursuing shared goals.
                             </span>
                         </div>
-                        <div class="spdj-main-respon-item-chart-container">
+                        <div class="spdj-main-bcomp-item-chart-container">
                             <div class="spdj-main-bcomp-item-chart">
                                 <div class="spdj-main-bcomp-item-stat">25%</div>
                                 <div class="spdj-main-bcomp-bar-chart"><img src="images/25pct_bluishgreen_bar_chart.png"/></div>
@@ -527,7 +527,7 @@
                 <div class="spdj-main-tech-card">
                     <div class="spdj-main-tech-title-container">
                         <span class="spdj-main-tech-title">
-                            <span class="spdj-main-tech-icon"><img src="images/technical-icon.png"/></span>
+                            <span class="spdj-main-tech-icon"><img src="images/technical-icon@2x.png"/></span>
                             Technical Competencies
                             <span class="spdj-main-tech-help"><span class="glyphicon glyphicon-question-sign"></span></span>
                         </span>
@@ -605,7 +605,7 @@
                                 Tech Comp
                             </span>
                             <span class="spdj-main-tech-item-detail">
-                                A preference for work-related interdependence, group decision making, and pursuing shared goals.
+                                Motivated to seek influence, recognition, and increasing levels of responsibility.
                             </span>
                         </div>
                         <div class="spdj-main-respon-item-chart-container">
@@ -617,6 +617,54 @@
                     </div>
                 </div>
                 <!-- Technical Competencies Card Ends -->
+
+                <!-- Education Card Begins -->
+                <div class="spdj-main-edu-card">
+                    <div class="spdj-main-edu-title-container">
+                        <span class="spdj-main-edu-title">
+                            <span class="spdj-main-edu-icon"><img src="images/education-icon@2x.png"/></span>
+                            Education
+                            <span class="spdj-main-edu-help"><span class="glyphicon glyphicon-question-sign"></span></span>
+                        </span>
+                        <span class="spdj-main-edu-lvl-title">Level Required</span>
+                    </div>
+                    <div class="spdj-main-edu-item-container">
+                        <div class="spdj-main-edu-item-text-container">
+                            <span class="spdj-main-edu-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-edu-item-icon"></span>
+                                Bachelors Degree
+                            </span>
+                        </div>
+                        <div class="spdj-main-edu-item-level-container">
+                            <div class="spdj-main-edu-level">4 year degree+</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Education Card Ends -->
+
+                <!-- Experience Card Begins -->
+                <div class="spdj-main-exp-card">
+                    <div class="spdj-main-exp-title-container">
+                        <span class="spdj-main-exp-title">
+                            <span class="spdj-main-exp-icon"><img src="images/experience-icon@2x.png"/></span>
+                            Experience
+                            <span class="spdj-main-exp-help"><span class="glyphicon glyphicon-question-sign"></span></span>
+                        </span>
+                        <span class="spdj-main-exp-lvl-title">Level Required</span>
+                    </div>
+                    <div class="spdj-main-exp-item-container">
+                        <div class="spdj-main-exp-item-text-container">
+                            <span class="spdj-main-exp-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-exp-item-icon"></span>
+                                Mid-career level
+                            </span>
+                        </div>
+                        <div class="spdj-main-exp-item-level-container">
+                            <div class="spdj-main-exp-level">3-6 years</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Experience Card Ends -->
             </div>
             <!-- Cards Container Ends -->
         </div>
